--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.2
   get: ^4.6.6
+  intl: ^0.20.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  test: ^1.24.9
 flutter:
   uses-material-design: true
   assets:
